# accuchek-rust

./: Cargo.toml  LICENSE  README.md  accuchek.db
.github/workflows/: build-windows.yml
src/: config.rs  device.rs  error.rs  export.rs  gui.rs  main.rs  protocol.rs  stats.rs  storage.rs  units.rs
