[package]
name = "accuchek"
version = "0.1.3"
edition = "2021"
description = "Download samples from Roche Accu-Chek blood glucose meters via USB"
authors = ["Ported from C++ original"]
license = "MIT"

[dependencies]
rusb = "0.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }

# GUI dependencies
eframe = "0.33.3"
egui_plot = "0.34.0"
rfd = "0.16"  # Native file dialogs
printpdf = "0.8"  # PDF generation
dirs = "6.0"  # OS-specific directories

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies if needed

[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies if needed

[[bin]]
name = "accuchek"
path = "src/main.rs"
